--- a/Custom VtR-2E.html
+++ b/Custom VtR-2E.html
@@ -1459,7 +1459,7 @@
 <!-- PAGE 2 -->
 <div class="expandedsheet">
 
-    <div class="leftcolumn" style="width: 447px;">
+    <div class="leftcolumnOLD" style="width: 447px;">
 
         <fieldset class="repeating_custom1">
             <div class="sheet-customroll">
@@ -1484,7 +1484,7 @@
         </fieldset>
 
     </div>
-    <div class="rightcolumn" style="width: 447px;">
+    <div class="rightcolumnOLD" style="width: 447px;">
         
         <fieldset class="repeating_custom2">
             <div class="sheet-customroll">
@@ -1820,6 +1820,11 @@
             <div class="sheet-customroll">
                 <span class="subheader">Status</span><br>
                 <textarea rows="2" cols="40" name="attr_status"></textarea>
+            </div>
+            <br>
+            <div class="sheet-customroll">
+                <span class="subheader">&nbsp;&nbsp;Other: </span><input type="text" class="title" name="attr_titleExpMerit" style="text-align:left;"/><br>
+                <textarea rows="2" cols="40" name="attr_textExpMerit"></textarea>
             </div>
             <br>
         </div>        
